[project]
name = "pcrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yohann MARTIN", email = "mimichackeur@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
]

[tool.mypy]
strict = true

[tool.ruff]
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "C",        # flake8-comprehensions
    "B",        # flake8-bugbear
    "UP",       # pyupgrade,
    "N",        # pep8-naming
    "S",        # flake8-bandit
    "ASYNC",    # flake8-async
    "DTZ",      # flake8-datetimez
    "PTH",      # flake8-use-pathlib
    "RUF",      # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by ruff
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Opinionated warning on exception chaining
    "S101",  # Asserts
    "C901",  # Too complex
    "E741",  # Ambiguous variable name
    "S324",  # md5
    "S105",  # hardcoded-password-string
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"